src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__artist_overview_ui__artist_overview_ui_tests__tests__snapshot_tests__artist_overview_ui_renders_loading.snap
---
source: src/ui/lidarr_ui/library/artist_overview_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭───────────────────────────────────────────────────────  Overview  ───────────────────────────────────────────────────────╮                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │ Loading ...                                                                                                              │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
